selected to model option 1, started html, linked to css, added reset to css

--- a/about.html
+++ b/about.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="" alt=""> <!--use 'git good' twitch emote as logo-->
+            </div>
+            <h1>Catarina Anthony</h1>
+            <div class="links">
+            <a href="#top">Home</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
