completed outline for html code

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="" alt=""> <!--use 'git good' twitch emote as logo-->
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
             </div>
             <h1>Catarina Anthony</h1>
             <div class="links">
@@ -21,5 +21,55 @@
             </div>
         </nav>
     </header>
+    <section id="top">
+        <div class="pfp">
+            <img src="" alt="Image of Catarina Anthony"> <!--add photo of self to go beside bio-->
+        </div>
+        <div class="bio">
+            <h2>Catarina Anthony</h2>
+            <button>My Projects</button>
+            <p></p> <!--give brief intro and why I got into coding-->
+        </div>
+    </section>
+    <section  id="projects">
+        <div class=""> <!--add project names?-->
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div class="">
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div class="">
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div class="">
+            <img src="" alt="">
+            <p></p>
+        </div>
+    </section>
+    <section id="about">
+        <div class="cool">
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div class="fun">
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div class="spicy">
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div class="special">
+            <img src="" alt="">
+            <p></p>
+        </div>
+    </section>
+    <footer id="contact">
+        <h3>Like What You See?</h3>
+        <button>Contact Me</button>
+    </footer>
 </body>
 </html>
