added favicon, added more css, adjusted and added to html

--- a/about.html
+++ b/about.html
@@ -9,15 +9,13 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <div>
                 <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-            </div>
-            <h1>Catarina Anthony</h1>
-            <div class="links">
-            <a href="#top">Home</a>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+                <h1>Catarina Anthony</h1>
+                <a href="#top">Home</a>
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
             </div>
         </nav>
     </header>
