nav bar should be finalized, moving onto bio section

--- a/about.html
+++ b/about.html
@@ -8,16 +8,20 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div>
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <h1>Catarina Anthony</h1>
-                <a href="#top">Home</a>
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
-            </div>
-        </nav>
+        <section class="colorbanner">
+            <nav>
+                <div>
+                    <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
+                    <h1>Catarina Anthony</h1>
+                    <div class="links">
+                        <a href="#top">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#projects">Projects</a>
+                        <a href="#contact">Contact</a>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </header>
     <section id="top">
         <div class="pfp">
