--- a/about.html
+++ b/about.html
@@ -5,73 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="contact.html">
+    <link rel="stylesheet" href="projects.html">
 </head>
 <body>
     <header>
         <section class="colorbanner">
             <nav>
                 <div>
-                    <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                    <h1>Catarina Anthony</h1>
+                    <a target_"blank href="https://github.com/Nekomancer1024">
+                        <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
+                    </a>
+                    <h1>About Me</h1>
                     <div class="links">
-                        <a href="#top">Home</a>
-                        <a href="#about">About</a>
-                        <a href="#projects">Projects</a>
-                        <a href="#contact">Contact</a>
+                        <a href="index.html">Home</a>
+                        <a href="projects.html">Projects</a>
+                        <a href="contact.html">Contact</a>
                     </div>
                 </div>
             </nav>
         </section>
     </header>
-    <section id="top">
-        <div class="pfp">
-            <img src="" alt="Image of Catarina Anthony"> <!--add photo of self to go beside bio-->
-        </div>
-        <div class="bio">
-            <h2>Catarina Anthony</h2>
-            <button>My Projects</button>
-            <p></p> <!--give brief intro and why I got into coding-->
-        </div>
-    </section>
-    <section  id="projects">
-        <div class=""> <!--add project names?-->
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div class="">
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div class="">
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div class="">
-            <img src="" alt="">
-            <p></p>
-        </div>
-    </section>
-    <section id="about">
-        <div class="cool">
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div class="fun">
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div class="spicy">
-            <img src="" alt="">
-            <p></p>
-        </div>
-        <div class="special">
-            <img src="" alt="">
-            <p></p>
-        </div>
-    </section>
-    <footer id="contact">
-        <h3>Like What You See?</h3>
-        <button>Contact Me</button>
-    </footer>
 </body>
 </html>
