--- a/index.html
+++ b/index.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="about.html">
+    <link rel="stylesheet" href="contact.html">
+    <link rel="stylesheet" href="projects.html">
 </head>
-<body>
-    
-</body>
+    <body>
+        <header>
+            <section class="colorbanner">
+                <nav>
+                    <div>
+                        <a target_"blank href="https://github.com/Nekomancer1024">
+                            <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
+                        </a>
+                        <h1>Catarina Anthony</h1>
+                        <div class="links">
+                            <a href="#top">Home</a>
+                            <a href="about.html">About</a>
+                            <a href="projects.html">Projects</a>
+                            <a href="contact.html">Contact</a>
+                        </div>
+                    </div>
+                </nav>
+            </section>
+        </header>
+        <section id="top">
+            <div class="pfp">
+                <img src="images/pfp.png" alt="Image of Catarina Anthony"> <!--add photo of self to go beside bio-->
+            </div>
+            <div class="bio">
+                <h2>Catarina Anthony</h2>
+                <button>My Projects</button>
+                <p>Virtual Greetings! I've been practicing code on and off for a year now and finally made the decision to go to school. 
+                    i've always been one for learning but for something like this I realized I needed the extra push to stay on track. 
+                    I've enjoyed watching others code and have had the growing interest in being able to create web pages for friends and 
+                    small businesses. When i'm not burning the late night oil studying coding, i'm also attempting to study Japanese. 
+                </p> <!--give brief intro and why I got into coding-->
+            </div>
+        </section>
+        <section  id="projects">
+            <div class=""> <!--add project names?-->
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="">
+                <img src="" alt="">
+                <p></p>
+            </div>
+        </section>
+        <section id="about">
+            <div class="cool">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="fun">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="spicy">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="special">
+                <img src="" alt="">
+                <p></p>
+            </div>
+        </section>
+        <footer id="contact">
+            <h3>Like What You See?</h3>
+            <button>Contact Me</button>
+        </footer>
+    </body>
 </html>
