--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="about.html">
+    <link rel="stylesheet" href="contact.html">
 </head>
 <body>
-    <h1> PROJECTS </h1>
+    <header>
+        <section class="colorbanner">
+            <nav>
+                <div>
+                    <a target_"blank href="https://github.com/Nekomancer1024">
+                        <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
+                    </a>
+                    <h1>Projects</h1>
+                    <div class="links">
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="projects.html">Projects</a>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                </div>
+            </nav>
+        </section>
+    </header>
 </body>
 </html>
