header and footer complete, working on flexbox galleries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <!--page links-->
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="about.html">
     <link rel="stylesheet" href="contact.html">
@@ -30,51 +35,53 @@
         </header>
         <section id="top">
             <div class="pfp">
-                <img src="images/pfp.png" alt="Image of Catarina Anthony"> <!--add photo of self to go beside bio-->
+                <a target="_blank" href="https://www.linkedin.com/in/catarina-anthony-684a90bb/">
+                <img src="images/pfp.png" alt="Image of Catarina Anthony">
+                </a>
             </div>
             <div class="bio">
                 <h2>Catarina Anthony</h2>
                 <button>My Projects</button>
                 <p>Virtual Greetings! I've been practicing code on and off for a year now and finally made the decision to go to school. 
-                    i've always been one for learning but for something like this I realized I needed the extra push to stay on track. 
+                    I've always been one for learning but for something like this I realized I needed the extra push to stay on track. 
                     I've enjoyed watching others code and have had the growing interest in being able to create web pages for friends and 
-                    small businesses. When i'm not burning the late night oil studying coding, i'm also attempting to study Japanese. 
-                </p> <!--give brief intro and why I got into coding-->
+                    small businesses.
+                </p>
             </div>
         </section>
         <section  id="projects">
             <div class=""> <!--add project names?-->
-                <img src="" alt="">
+                <img src="images/first_mimo_webpage.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
             <div class="">
-                <img src="" alt="">
+                <img src="images/sweet_eats_project.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
             <div class="">
-                <img src="" alt="">
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
             <div class="">
-                <img src="" alt="">
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
         </section>
         <section id="about">
             <div class="cool">
-                <img src="" alt="">
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
             <div class="fun">
-                <img src="" alt="">
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
             <div class="spicy">
-                <img src="" alt="">
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
             <div class="special">
-                <img src="" alt="">
+                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
                 <p></p>
             </div>
         </section>
