--- a/index.html
+++ b/index.html
@@ -50,41 +50,25 @@
             </div>
         </section>
         <section  id="projects">
-            <div class=""> <!--add project names?-->
-                <img src="images/first_mimo_webpage.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-            <div class="">
-                <img src="images/sweet_eats_project.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-            <div class="">
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-            <div class="">
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
+            <div class="bg-img"></div>
+            <div class="bg-img"></div>
+            <div class="bg-img"></div>
+            <div class="bg-img"></div>
+            <p>project 1</p>
+            <p>project 2</p>
+            <p>project 3</p>
+            <p>project 4</p>
         </section>
         <section id="about">
-            <div class="cool">
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-            <div class="fun">
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-            <div class="spicy">
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-            <div class="special">
-                <img src="images/favicon_io/apple-touch-icon.png" alt="favicon of vampyreneko93 gitgood emote">
-                <p></p>
-            </div>
-        </section>
+            <div class="bg-img"></div>
+            <div class="bg-img"></div>
+            <div class="bg-img"></div>
+            <div class="bg-img"></div>
+            <p>project 1</p>
+            <p>project 2</p>
+            <p>project 3</p>
+            <p>project 4</p>
+</section>
         <footer id="contact">
             <h3>Like What You See?</h3>
             <button>Contact Me</button>
