--- a/contact.html
+++ b/contact.html
@@ -27,5 +27,17 @@
             </nav>
         </section>
     </header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>UNDER CONSTRUCTION</h1> <!--Adding code later-->
+    <footer id="contact">
+        <h3>Like What You See?</h3>
+        <button>Contact Me</button>
+    </footer>
 </body>
 </html>
