changed p text under about id

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <div class="bg-img"></div>
             <div class="bg-img"></div>
             <div class="bg-img"></div>
-            <p>project 1</p>
-            <p>project 2</p>
-            <p>project 3</p>
-            <p>project 4</p>
+            <p>cool</p>
+            <p>fun</p>
+            <p>spicy</p>
+            <p>special</p>
 </section>
         <footer id="contact">
             <h3>Like What You See?</h3>
